Project

General

Profile

Actions

Bug #62250

closed

retry metadata cache notifications with INVALIDATE_OBJ

Added by Casey Bodley 9 months ago. Updated 6 months ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
% Done:

100%

Source:
Development
Tags:
cache notify backport_processed
Backport:
pacific quincy reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 4 (0 open4 closed)

Related to rgw - Bug #51674: Potential race condition in robust notifyResolvedAdam Emerson

Actions
Copied to rgw - Backport #62300: pacific: retry metadata cache notifications with INVALIDATE_OBJResolvedCasey BodleyActions
Copied to rgw - Backport #62301: reef: retry metadata cache notifications with INVALIDATE_OBJResolvedCasey BodleyActions
Copied to rgw - Backport #62302: quincy: retry metadata cache notifications with INVALIDATE_OBJResolvedCasey BodleyActions
Actions #1

Updated by Casey Bodley 9 months ago

  • Related to Bug #51674: Potential race condition in robust notify added
Actions #2

Updated by Casey Bodley 9 months ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 52711
Actions #3

Updated by Casey Bodley 9 months ago

  • Assignee set to Casey Bodley
Actions #4

Updated by Casey Bodley 9 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Backport Bot 9 months ago

  • Copied to Backport #62300: pacific: retry metadata cache notifications with INVALIDATE_OBJ added
Actions #6

Updated by Backport Bot 9 months ago

  • Copied to Backport #62301: reef: retry metadata cache notifications with INVALIDATE_OBJ added
Actions #7

Updated by Backport Bot 9 months ago

  • Copied to Backport #62302: quincy: retry metadata cache notifications with INVALIDATE_OBJ added
Actions #8

Updated by Backport Bot 9 months ago

  • Tags changed from cache notify to cache notify backport_processed
Actions #9

Updated by Konstantin Shalygin 6 months ago

  • Status changed from Pending Backport to Resolved
  • Target version set to v19.0.0
  • % Done changed from 0 to 100
  • Source set to Development
Actions

Also available in: Atom PDF